<resources>
    <string name="APP_NAME">My Dictionary</string>

    <string name="DESCRIPTION_NAVIGATION_DRAWER_OPEN">Open navigation drawer</string>
    <string name="DESCRIPTION_NAVIGATION_DRAWER_CLOSE">Close navigation drawer</string>

    <string name="ERROR_CONNECTION_GENERAL">Oops! Connection Error!</string>
    <string name="ERROR_FILE_NOT_FOUND">Error: File not found!</string>
    <string name="ERROR_FILE_NOT_UPLOADED">Error: Photo is not uploaded!</string>
    <string name="ERROR_AUTHENTICATION_FAILED">Authentication failed.</string>
    <string name="ERROR_DICTIONARY_NOT_CREATED">Error! Dictionary is not created!</string>
    <string name="ERROR_ENTRY_NOT_DELETED">Error! The Entry has not been deleted.</string>
    <string name="ERROR_DICTIONARY_NOT_DELETED">Error! The Dictionary has not been deleted.</string>
    <string name="ERROR_ENTRY_NOT_FOUND">Oops! Entry not found!</string>
    <string name="ERROR_ENTRY_NOT_CREATED_OR_UPDATED">Error! Entry has not been created or updated!</string>

    <string name="TITLE_ENTRY_VALUE">Entry value</string>
    <string name="TITLE_ENTRY_TRANSLATION">Translation:</string>
    <string name="TITLE_ENTRY_CONTEXT_USAGE">Example:</string>
    <string name="TITLE_ENTRY_IMAGE_URL">Image URL</string>
    <string name="TITLE_DIALOG_CONFIRM_ENTRY_DELETION">Confirm deletion</string>
    <string name="TITLE_DIALOG_DATA_NOT_SAVED">Data not saved</string>
    <string name="TITLE_DIALOG_ADD_DICTIONARY">New dictionary name</string>
    <string name="TITLE_DIALOG_ERROR_DEFAULT">Error</string>
    <string name="TITLE_DIALOG_ERROR_NO_INTERNET_CONNECTION">No Internet connection</string>
    <string name="TITLE_DIALOG_ERROR_UNAUTHORIZED_REQUEST">Authorization error</string>
    <string name="TITLE_DIALOG_ERROR_SERVER_ERROR">Server error</string>
    <string name="TITLE_DIALOG_ERROR_SERVER_UNAVAILABLE">Server unavailable</string>
    <string name="TITLE_ACTIVITY_EDIT_MODE">Edit entry</string>
    <string name="TITLE_ACTIVITY_CREATE_NEW_ENTRY">New entry</string>
    <string name="TITLE_EMAIL_PASSWORD_BLOCK">Email and Password</string>

    <string name="TEXT_RESULT_SUCCESS_ENTRY_STORED">Success! Entry have been stored.</string>
    <string name="TEXT_RESULT_SUCCESS_DICTIONARY_STORED">Success! Dictionary have been created.</string>
    <string name="TEXT_DIALOG_DATA_NOT_SAVED">Do you want to leave without data saving?</string>
    <string name="TEXT_DIALOG_CONFIRM_ENTRY_DELETION">Do you want to delete this entry?</string>
    <string name="TEXT_DIALOG_CONFIRM_DICTIONARY_DELETION">All your entries for this dictionary will
        be deleted.\nDo you want to proceed?
    </string>
    <string name="TEXT_DIALOG_ERROR_UNAUTHORIZED_REQUEST">Permission denied.</string>
    <string name="TEXT_DIALOG_ERROR_NO_INTERNET_CONNECTION">Unable to connect to the server. Please check your internet connection settings.</string>
    <string name="TEXT_DIALOG_ERROR_SERVER_ERROR">The server returned an error.</string>
    <string name="TEXT_DIALOG_ERROR_SERVER_UNAVAILABLE">The server is currently down for maintenance. Please try again later.</string>
    <string name="TEXT_DIALOG_NO_DICTIONARY_ADDED">Please add at least one dictionary</string>
    <string name="TEXT_NO_ENTRY_IN_DICTIONARY">There is not any entry in this dictionary</string>
    <string name="TEXT_USER_NAME_ANONYMOUS">Anonymous</string>
    <string name="TEXT_NO_SEARCH_RESULTS">No search results</string>

    <string name="MENU_OPTION_SORT_BY_NEWEST">Newest</string>
    <string name="MENU_OPTION_SORT_BY_OLDEST">Oldest</string>
    <string name="MENU_OPTION_SORT_BY_A_Z">A-Z</string>
    <string name="MENU_OPTION_SORT_BY_Z_A">Z-A</string>
    <string name="MENU_OPTION_SORT_BY">Sort by</string>
    <string name="MENU_OPTION_DELETE_DICTIONARY">Delete dictionary</string>
    <string name="MENU_OPTION_SIGN_OUT">Sign Out</string>
    <string name="MENU_OPTION_ADD_DICTIONARY">Add dictionary</string>
    <string name="MENU_OPTION_SEARCH">Search</string>

    <string name="BUTTON_OK">Ok</string>
    <string name="BUTTON_SAVE">Save</string>
    <string name="BUTTON_CREATE">Create</string>
    <string name="BUTTON_DIALOG_POSITIVE">Ok</string>
    <string name="BUTTON_DIALOG_NEGATIVE">Cancel</string>
    <string name="BUTTON_SIGN_IN">Sign In</string>
    <string name="BUTTON_SIGN_IN_WITH_GOGGLE">Sign in with Google</string>
    <string name="BUTTON_CREATE_ACCOUNT">Create Account</string>

    <string name="HINT_DICTIONARY_NAME">Dictionary name</string>
    <string name="HINT_SEARCH">Search entry</string>
    <string name="HINT_EMAIL">Email</string>
    <string name="HINT_PASSWORD">Password</string>
    <string name="HINT_ERROR_REQUIRED_FILLED_IN_FIELD">Required</string>
    <string name="HINT_ERROR_INVALID_FIELD">Invalid</string>
    <string name="HINT_ERROR_SHORT_PASSWORD">At least 6 characters</string>
</resources>
